--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
   font-size: 110%;
 }
 body {
-  background: #eee;
+  background:whitesmoke;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -32,7 +32,7 @@ span::after {
 .main-body {
   height: 30rem;
   min-width: 50rem;
-  background: #eee;
+  background: whitesmoke;
   position: relative;
   overflow: hidden;
   cursor: pointer;
@@ -42,7 +42,7 @@ span::after {
 
 .bonnet {
   width: 3%;
-  background: #eee;
+  background: whitesmoke;
   z-index: 1;
   height: 20%;
   position: absolute;
@@ -51,7 +51,7 @@ span::after {
 }
 .main-body:hover .bonnet {
   width: 3%;
-  background: #eee;
+  background: whitesmoke;
   z-index: 1;
   height: 20%;
   position: absolute;
@@ -136,7 +136,7 @@ span::after {
 .front-wheel {
   width: 10%;
   height: 10%;
-  background: #eee;
+  background: whitesmoke;
   z-index: 2;
   position: absolute;
   bottom: 0;
@@ -152,7 +152,7 @@ span::after {
 .rear-wheel {
   width: 10%;
   height: 10%;
-  background: #eee;
+  background: whitesmoke;
   z-index: 2;
   position: absolute;
   bottom: 0;
@@ -349,7 +349,7 @@ left: 31%; */
 .front-triangle {
   position: absolute;
   left: 2.9%;
-  background: #eee;
+  background: whitesmoke;
   height: 14%;
   width: 5%;
   z-index: 2;
@@ -376,28 +376,33 @@ left: 31%; */
 
 }
 
-@media (max-width: 910px) {
+@media (max-width: 1018px) {
   html {
-    font-size: 80%;
+    font-size: 90%;
   }
 }
-@media (max-width: 730px) {
+@media (max-width: 833px) {
   html {
-    font-size: 60%;
+    font-size: 70%;
   }
 
   span::after {
     content: 'Click';
   }
   .main-body {
-    margin-bottom: 40rem;
+    margin-bottom: 30rem;
   }
   body h1 {
     margin-bottom: 20rem;
     font-size: 2rem;
   }
 }
-@media (max-width: 557px) {
+@media (max-width: 646px) {
+  html {
+    font-size: 60%;
+  }
+}
+@media (max-width: 556px) {
   html {
     font-size: 50%;
   }
